--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Bartosz Mroczkowski",
   "license": "ISC",
-  "devDependencies": {
-    "electron": "^19.0.16"
+  "dependencies": {
+    "electron": "^29.1.6"
   }
 }
